--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contexto - Multiplayer</title>
 	<link rel="stylesheet" href="app/style/style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
 	<script src="app/elm-app-min.js"></script>
 </head>
 
